# MedIntelOS

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MEDICAL_DISCLAIMER.md  Makefile  README.md  SECURITY.md  SHA256SUMS-with-assets.txt  SHA256SUMS.txt  cdss_engine.py  consent_contracts.sol  docker-compose.yml  federated_learning.py  fhir_r5_server.py  hardhat.config.ts  package-lock.json  package.json  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml
MedIntelOS/: .dockerignore  .env.example  CHANGELOG.md  pyproject.toml  tsconfig.json
MedIntelOS/.github/: dependabot.yml
MedIntelOS/contract-tests/: consent.ts
MedIntelOS/docs/: ARCHITECTURE.md  DEPLOYMENT.md  THREAT_MODEL.md  VALIDATION.md
MedIntelOS/scripts/: verify.ps1  verify.sh
MedIntelOS/src/medintelos/: cdss.py  config.py  security.py
MedIntelOS/src/medintelos/api/: app.py
MedIntelOS/src/medintelos/fhir/: builders.py
MedIntelOS/tests/: test_cdss.py
contract-tests/: consent.ts
contracts/: MedIntelOSConsent.sol
examples/: cdss-request.json  fhir-patient.json
src/medintelos/: __init__.py  __main__.py  audit.py  federated.py
src/medintelos/api/: schemas.py
src/medintelos/fhir/: __init__.py  repository.py
tests/: test_api.py  test_audit.py  test_federated.py  test_fhir.py
