[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "medintelos"
version = "0.1.0"
description = "Open reference implementation for FHIR R5, CDS Hooks, federated-learning experiments, and consent research."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Ciprian Stefan Plesca" }]
keywords = ["healthcare", "fhir", "cds-hooks", "federated-learning", "clinical-decision-support"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "fastapi>=0.115,<1",
  "numpy>=1.26,<3",
  "pydantic>=2.8,<3",
  "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "mypy>=1.11,<3",
  "pytest>=8,<10",
  "pytest-asyncio>=0.24,<2",
  "pytest-cov>=5,<8",
  "ruff>=0.6,<1",
]

[project.scripts]
medintelos = "medintelos.__main__:main"

[project.urls]
Homepage = "https://github.com/Ciprian-LocalPulse/MedIntelOS"
Issues = "https://github.com/Ciprian-LocalPulse/MedIntelOS/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/medintelos"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers --cov=medintelos --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
warn_unused_ignores = true
packages = ["medintelos"]
